--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,12 +21,10 @@ jobs:
 
         steps:
             - name: Checkout repository
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
 
             - name: Install cosign tool
-              uses: sigstore/cosign-installer@f3c664df7af409cb4873aa5068053ba9d61a57b6
-              with:
-                cosign-release: 'v1.11.1'
+              uses: sigstore/cosign-installer@v3.4.0
 
             - name: Setup Docker buildx
               uses: docker/setup-buildx-action@v2
