--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -46,3 +46,8 @@ jobs:
                 labels: ${{ steps.meta.outputs.labels }}
                 cache-from: type=gha
                 cache-to: type=gha,mode=max
+
+            - name: Tell Watchtower to update the image
+              shell: bash
+              run: |
+                curl -H "Authorization: Bearer ${{ secrets.UPDATE_TOKEN }}" ${{ secrets.WATCHTOWER_URL }}/v1/update
