--- a/Piglet-API.csproj
+++ b/Piglet-API.csproj
@@ -7,6 +7,7 @@
     <RootNamespace>Piglet_API</RootNamespace>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
