--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,6 +23,7 @@ jobs:
               uses: actions/checkout@v3
               with:
                 repository: ScarletPigs/PigletDomainModels
+                path: PigletDomainModels
 
             - name: Checkout repository
               uses: actions/checkout@v4
